added navber and banner

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,8 @@ h1 {
 body {
   font-family: "Poppins", sans-serif;
 }
+.banner {
+  background-image: url("../images/hero-banner.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
