--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 .banner {
+  height: 100vh;
   background-image: url("../images/hero-banner.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
